Fixed main content overflow issue

--- a/app/assets/stylesheets/tylium/layout.scss
+++ b/app/assets/stylesheets/tylium/layout.scss
@@ -57,19 +57,19 @@
 .view-content-collapsed {
   left: $sidebarCollapsed;
   transition: left .3s ease;
+  width: calc(100vw - 43px);
 }  
 
 .view-content-expanded {
   left: $sidebarExpanded;
   transition: right .3s ease;
+  width: calc(100vw - 250px);
 }
 
 .view-content {
   background: $secondaryBgColor;
   position: fixed;
   height: calc(100vh - 60px);
-  width: 100%;
-  min-width: 570px;
   top: $navbarHeight;
   overflow: auto;
   font-size: 0.9rem;
